--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
             </div>
         </div>
     </div>
+    <script src="./settings.js?v=0.0.0"></script>
+    <script src="https://unpkg.com/wavesurfer.js@7"></script>
     <script src="./js/index.js?v=0.0.0"></script>
 </body>
