--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Sound-Git</title>
-    <link rel="shortcut icon" href="./assets/icon.ico?v=1">
+    <meta name="summary" content="정적 mp3파일 재생기. 미리듣기는 안됩니다. 링크 눌러주세요.">
+    <link rel="shortcut icon" href="./soundcloud.jpg">
     <link rel="stylesheet" media="screen" href="./css/main.css?v=0.0.2">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta property="og:image" content="./soundcloud.jpg" /> 
+    <meta property="og:title" content="Sound-Git" /> 
+    <meta property="og:description" content="정적 mp3파일 재생기. 미리듣기는 안됩니다. 링크 눌러주세요." /> 
 </head>
 <body>
     <div id="app">
