--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
     </div>
     <script src="./settings.js?v=0.0.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked@15.0.2/lib/marked.umd.min.js"></script>    
     <script src="https://unpkg.com/wavesurfer.js@7"></script>
-    <script src="./js/index.js?v=0.0.13"></script>
+    <script src="./js/index.js?v=0.0.14"></script>
 </body>
