--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="wrapper">
             <div id="nav-box">
                 <div id="title-box">
-                    <h1 id="title">Sound-Git</h1>
+                    <h1 id="title"><a href="./">Sound-Git</a></h1>
                 </div>
             </div>
             <div id="content-box">
