--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="./soundcloud.jpg" /> 
     <meta property="og:title" content="Sound-Git" /> 
     <meta property="og:description" content="정적 mp3파일 재생기. 미리듣기는 안됩니다. 링크 눌러주세요." /> 
-    <meta property="og:audio" content="./mp3/d241122_in_my_dream.mp3" /> 
+    <meta property="og:video:url" content="https://embeddable-music-player.yizack.com/player/just-stay.html" /> 
 </head>
 <body>
     <div id="app">
