--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Sound-Git</title>
-    <meta name="summary" content="정적 mp3파일 재생기. 미리듣기는 안됩니다. 링크 눌러주세요.">
+    <meta name="summary" content="A git-based static mp3 player">
     <link rel="shortcut icon" href="./Peachtartshortcut.ico">
-    <link rel="stylesheet" media="screen" href="./css/main.css?v=0.0.6">
+    <link rel="stylesheet" media="screen" href="./css/main.css?v=0.0.7">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <meta property="og:image" content="./peachtart.png" /> 
+    <meta property="og:image" content="./peachtart1.png" /> 
     <meta property="og:title" content="Sound-Git" /> 
-    <meta property="og:description" content="정적 mp3파일 재생기. 미리듣기는 안됩니다. 링크 눌러주세요." /> 
+    <meta property="og:description" content="A git-based static mp3 player" /> 
 </head>
 <body>
     <div id="app">
@@ -20,6 +20,9 @@
             <div id="nav-box">
                 <div id="title-box">
                     <h1 id="title"><a href="./">Sound-Git</a></h1>
+                </div>
+                <div id="menu-box">
+                    <a href="./?a=about">About</a>
                 </div>
             </div>
             <div id="content-box">
@@ -53,8 +56,8 @@
         </div>
         <audio style="display:none;" ></audio>
     </div>
-    <script src="./settings.js?v=0.0.0"></script>
+    <script src="./settings.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked@15.0.2/lib/marked.umd.min.js"></script>    
     <script src="https://unpkg.com/wavesurfer.js@7"></script>
-    <script src="./js/index.js?v=0.0.20"></script>
+    <script src="./js/index.js?v=0.0.21"></script>
 </body>
