--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./Peachtartshortcut.ico">
     <link rel="stylesheet" media="screen" href="./css/main.css?v=0.0.7">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <meta property="og:image" content="./peachtart1.png" /> 
+    <meta property="og:image" content="./logo.png" /> 
     <meta property="og:title" content="Sound-Git" /> 
     <meta property="og:description" content="A git-based static mp3 player" /> 
 </head>
@@ -28,7 +28,7 @@
             <div id="content-box">
                 <div id="player-box">
                     <div id="img-box" class="mainbox">
-                        <img src="./peachtart1.png">
+                        <img src="./logo.png">
                     </div>
                     <div id="controller-box" class="mainbox inactive">
                         <div id="playbar-box">
